4.semestar/Formalna_verifikacija_programske_potpore/labosi/lab2/jpf-aprop/src/main/gov/nasa/jpf/aprop/TestSpecParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/pcmehlitz/projects/grammars/TestSpec.g 2011-04-17 13:22:50

	package gov.nasa.jpf.aprop;
	
    import java.io.PrintWriter;
    import java.util.List;
    import java.util.ArrayList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class TestSpecParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "INT", "INT_PATTERN", "REAL", "REAL_PATTERN", "STRING", "STRING_PATTERN", "ID", "ID_PATTERN", "SIGN", "NUM", "NUM_PATTERN", "ESCAPE", "WS", "'|'", "'.'", "','", "'this'", "'('", "')'", "'true'", "'false'", "'new'", "'{'", "'}'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'matches'", "'within'", "'+-'", "'throws'", "'noThrows'", "'satisfies'"
    };
    public static final int SIGN=12;
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int ID_PATTERN=11;
    public static final int INT=4;
    public static final int ID=10;
    public static final int EOF=-1;
    public static final int NUM=13;
    public static final int STRING_PATTERN=9;
    public static final int REAL=6;
    public static final int T__19=19;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=16;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int ESCAPE=15;
    public static final int T__35=35;
    public static final int T__18=18;
    public static final int T__36=36;
    public static final int T__17=17;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int NUM_PATTERN=14;
    public static final int INT_PATTERN=5;
    public static final int REAL_PATTERN=7;
    public static final int STRING=8;

    // delegates
    // delegators


        public TestSpecParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public TestSpecParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return TestSpecParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/pcmehlitz/projects/grammars/TestSpec.g"; }


        // to report errors that are not grammar related
        PrintWriter err = new PrintWriter(System.err, true);

    	StringExpander exp = new StringExpander();
    	TestContext  tctx;

        List<String> expandStrings (String sp){
        	return exp.expand(sp);
        }
            
        List<Integer> expandInts (String sp){
        	List<String> sl = exp.expand(sp);
            ArrayList<Integer> list = new ArrayList<Integer>(sl.size());
            for (String s : sl){
            	list.add( new Integer(s));
            }
            return list;
        }
            
        List<Double> expandReals (String sp){
            List<String> sl = exp.expand(sp);
            ArrayList<Double> list = new ArrayList<Double>(sl.size());
            for (String s : sl){
                list.add( new Double(s));
            }
            return list;
        }
        
        List<Object> createLists (ArgList list) {
        	List<Object> ol = new ArrayList<Object>();
     		for (Object[] a : list.getArgCombinations()){
     			ol.add(a);
    		}    	
    		return ol;
        }
        
        List<Object> createObjects (String cls, ArgList args) {
        	List<Object> ol = new ArrayList<Object>();
        	if (args != null) {
        		for (Object[] a : args.getArgCombinations()){
        			addObject(cls,a,ol);
        		}
        	} else {
        		addObject(cls, null, ol);
        	}
        	return ol;
        }
        
        void addObject (String cls, Object[] args, List<Object> list){
    		Object o = tctx.create(cls,args);
        	if (o != null){
    			list.add(o);
        	}
        }

    	Goal createGoal (String id, ArgList args) {
    		Goal g = tctx.createGoal(id, args);
    		return g;
    	}

    	public TestSpecParser(TokenStream input, PrintWriter err, TestContext tctx) {
    		this(input);
    		
    		this.err = err;
    		this.tctx = tctx;
    	}
    	



    // $ANTLR start "testspec"
    // /Users/pcmehlitz/projects/grammars/TestSpec.g:90:1: testspec returns [TestSpec spec] : (e1= env ( '|' e2= env )* '.' )? a1= arglist ( '|' a2= arglist )* (g1= goal ( ',' g2= goal )* )? ;
    public final TestSpec testspec() throws RecognitionException {
        TestSpec spec = null;

        ArgList e1 = null;

        ArgList e2 = null;

        ArgList a1 = null;

        ArgList a2 = null;

        Goal g1 = null;

        Goal g2 = null;



        		spec = new TestSpec();
        	
        try {
            // /Users/pcmehlitz/projects/grammars/TestSpec.g:99:2: ( (e1= env ( '|' e2= env )* '.' )? a1= arglist ( '|' a2= arglist )* (g1= goal ( ',' g2= goal )* )? )
            // /Users/pcmehlitz/projects/grammars/TestSpec.g:99:4: (e1= env ( '|' e2= env )* '.' )? a1= arglist ( '|' a2= arglist )* (g1= goal ( ',' g2= goal )* )?
            {
            // /Users/pcmehlitz/projects/grammars/TestSpec.g:99:4: (e1= env ( '|' e2= env )* '.' )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==20) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /Users/pcmehlitz/projects/grammars/TestSpec.g:99:5: e1= env ( '|' e2= env )* '.'
                    {
                    pushFollow(FOLLOW_env_in_testspec73);
                    e1=env();

                    state._fsp--;
                    if (state.failed) return spec;
                    if ( state.backtracking==0 ) {
                       spec.addTargetArgs(e1); 
                    }
                    // /Users/pcmehlitz/projects/grammars/TestSpec.g:100:6: ( '|' e2= env )*
                    loop1:
                    do {
                        int alt1=2;
                        int LA1_0 = input.LA(1);

                        if ( (LA1_0==17) ) {
                            alt1=1;
                        }


                        switch (alt1) {
                    	case 1 :
                    	    // /Users/pcmehlitz/projects/grammars/TestSpec.g:100:7: '|' e2= env
                    	    {
                    	    match(input,17,FOLLOW_17_in_testspec97); if (state.failed) return spec;
                    	    pushFollow(FOLLOW_env_in_testspec102);
                    	    e2=env();

                    	    state._fsp--;
                    	    if (state.failed) return spec;
                    	    if ( state.backtracking==0 ) {
                    	       spec.addTargetArgs(e2); 
                    	    }

                    	    }
                    	    break;

                    	default :
                    	    break loop1;
                        }
                    } while (true);

                    match(input,18,FOLLOW_18_in_testspec132); if (state.failed) return spec;

                    }
                    break;

            }

            pushFollow(FOLLOW_arglist_in_testspec146);
            a1=arglist();

            state._fsp--;
            if (state.failed) return spec;
            if ( state.backtracking==0 ) {
               spec.addCallArgs(a1); 
            }
            // /Users/pcmehlitz/projects/grammars/TestSpec.g:105:4: ( '|' a2= arglist )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==17) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /Users/pcmehlitz/projects/grammars/TestSpec.g:105:5: '|' a2= arglist
            	    {
            	    match(input,17,FOLLOW_17_in_testspec170); if (state.failed) return spec;
            	    pushFollow(FOLLOW_arglist_in_testspec175);
            	    a2=arglist();

            	    state._fsp--;
            	    if (state.failed) return spec;
            	    if ( state.backtracking==0 ) {
            	       spec.addCallArgs(a2); 
            	    }

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            // /Users/pcmehlitz/projects/grammars/TestSpec.g:107:4: (g1= goal ( ',' g2= goal )* )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( ((LA5_0>=28 && LA5_0<=35)||(LA5_0>=37 && LA5_0<=39)) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /Users/pcmehlitz/projects/grammars/TestSpec.g:107:5: g1= goal ( ',' g2= goal )*
                    {
                    pushFollow(FOLLOW_goal_in_testspec203);
                    g1=goal();

                    state._fsp--;
                    if (state.failed) return spec;
                    if ( state.backtracking==0 ) {
                       spec.addGoal(g1); 
                    }
                    // /Users/pcmehlitz/projects/grammars/TestSpec.g:108:6: ( ',' g2= goal )*
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==19) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // /Users/pcmehlitz/projects/grammars/TestSpec.g:108:7: ',' g2= goal
                    	    {
                    	    match(input,19,FOLLOW_19_in_testspec231); if (state.failed) return spec;
                    	    pushFollow(FOLLOW_goal_in_testspec236);
                    	    g2=goal();

                    	    state._fsp--;
                    	    if (state.failed) return spec;
                    	    if ( state.backtracking==0 ) {
                    	       spec.addGoal(g2); 
                    	    }

                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);


                    }
                    break;

            }


            }

            if ( state.backtracking==0 ) {

              		//spec.printOn(new PrintWriter(System.out));
              	
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return spec;
    }
    // $ANTLR end "testspec"


    // $ANTLR start "env"
    // /Users/pcmehlitz/projects/grammars/TestSpec.g:113:1: env returns [ArgList a] : 'this' arglist ;
    public final ArgList env() throws RecognitionException {
        ArgList a = null;

        ArgList arglist1 = null;


        try {
            // /Users/pcmehlitz/projects/grammars/TestSpec.g:114:2: ( 'this' arglist )
            // /Users/pcmehlitz/projects/grammars/TestSpec.g:114:4: 'this' arglist
            {
            match(input,20,FOLLOW_20_in_env281); if (state.failed) return a;
            pushFollow(FOLLOW_arglist_in_env283);
            arglist1=arglist();

            state._fsp--;
            if (state.failed) return a;
            if ( state.backtracking==0 ) {
               a = arglist1; 
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return a;
    }
    // $ANTLR end "env"


    // $ANTLR start "arglist"
    // /Users/pcmehlitz/projects/grammars/TestSpec.g:117:1: arglist returns [ArgList a] : '(' (a1= arg ( ',' a2= arg )* )? ')' ;
    public final ArgList arglist() throws RecognitionException {
        ArgList a = null;

        ValSet a1 = null;

        ValSet a2 = null;



        		a = new ArgList();
        	
        try {
            // /Users/pcmehlitz/projects/grammars/TestSpec.g:121:2: ( '(' (a1= arg ( ',' a2= arg )* )? ')' )
            // /Users/pcmehlitz/projects/grammars/TestSpec.g:121:4: '(' (a1= arg ( ',' a2= arg )* )? ')'
            {
            match(input,21,FOLLOW_21_in_arglist324); if (state.failed) return a;
            // /Users/pcmehlitz/projects/grammars/TestSpec.g:122:7: (a1= arg ( ',' a2= arg )* )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( ((LA7_0>=INT && LA7_0<=ID)||(LA7_0>=23 && LA7_0<=26)) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // /Users/pcmehlitz/projects/grammars/TestSpec.g:122:8: a1= arg ( ',' a2= arg )*
                    {
                    pushFollow(FOLLOW_arg_in_arglist336);
                    a1=arg();

                    state._fsp--;
                    if (state.failed) return a;
                    if ( state.backtracking==0 ) {
                       a.add(a1); 
                    }
                    // /Users/pcmehlitz/projects/grammars/TestSpec.g:123:9: ( ',' a2= arg )*
                    loop6:
                    do {
                        int alt6=2;
                        int LA6_0 = input.LA(1);

                        if ( (LA6_0==19) ) {
                            alt6=1;
                        }


                        switch (alt6) {
                    	case 1 :
                    	    // /Users/pcmehlitz/projects/grammars/TestSpec.g:123:11: ',' a2= arg
                    	    {
                    	    match(input,19,FOLLOW_19_in_arglist366); if (state.failed) return a;
                    	    pushFollow(FOLLOW_arg_in_arglist371);
                    	    a2=arg();

                    	    state._fsp--;
                    	    if (state.failed) return a;
                    	    if ( state.backtracking==0 ) {
                    	       a.add(a2); 
                    	    }

                    	    }
                    	    break;

                    	default :
                    	    break loop6;
                        }
                    } while (true);


                    }
                    break;

            }

            match(input,22,FOLLOW_22_in_arglist408); if (state.failed) return a;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return a;
    }
    // $ANTLR end "arglist"


    // $ANTLR start "arg"
    // /Users/pcmehlitz/projects/grammars/TestSpec.g:129:1: arg returns [ValSet s] : ( int_arg[s] | real_arg[s] | string_arg[s] | boolean_arg[s] | object_arg[s] | field_arg[s] | list_arg[s] );
    public final ValSet arg() throws RecognitionException {
        ValSet s = null;


        		s = new ValSet();
        	
        try {
            // /Users/pcmehlitz/projects/grammars/TestSpec.g:133:2: ( int_arg[s] | real_arg[s] | string_arg[s] | boolean_arg[s] | object_arg[s] | field_arg[s] | list_arg[s] )
            int alt8=7;
            switch ( input.LA(1) ) {
            case INT:
            case INT_PATTERN:
                {
                alt8=1;
                }
                break;
            case REAL:
            case REAL_PATTERN:
                {
                alt8=2;
                }
                break;
            case STRING:
            case STRING_PATTERN:
                {
                alt8=3;
                }
                break;
            case 23:
            case 24:
                {
                alt8=4;
                }
                break;
            case 25:
                {
                alt8=5;
                }
                break;
            case ID:
                {
                alt8=6;
                }
                break;
            case 26:
                {
                alt8=7;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return s;}
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;
            }

            switch (alt8) {
                case 1 :
                    // /Users/pcmehlitz/projects/grammars/TestSpec.g:133:4: int_arg[s]
                    {
                    pushFollow(FOLLOW_int_arg_in_arg431);
                    int_arg(s);

                    state._fsp--;
                    if (state.failed) return s;

                    }
                    break;
                case 2 :
                    // /Users/pcmehlitz/projects/grammars/TestSpec.g:134:5: real_arg[s]
                    {
                    pushFollow(FOLLOW_real_arg_in_arg438);
                    real_arg(s);

                    state._fsp--;
                    if (state.failed) return s;

                    }
                    break;
                case 3 :
                    // /Users/pcmehlitz/projects/grammars/TestSpec.g:135:5: string_arg[s]
                    {
                    pushFollow(FOLLOW_string_arg_in_arg445);
                    string_arg(s);

                    state._fsp--;
                    if (state.failed) return s;

                    }
                    break;
                case 4 :
                    // /Users/pcmehlitz/projects/grammars/TestSpec.g:136:5: boolean_arg[s]
                    {
                    pushFollow(FOLLOW_boolean_arg_in_arg452);
                    boolean_arg(s);

                    state._fsp--;
                    if (state.failed) return s;

                    }
                    break;
                case 5 :
                    // /Users/pcmehlitz/projects/grammars/TestSpec.g:137:5: object_arg[s]
                    {
                    pushFollow(FOLLOW_object_arg_in_arg459);
                    object_arg(s);

                    state._fsp--;
                    if (state.failed) return s;

                    }
                    break;
                case 6 :
                    // /Users/pcmehlitz/projects/grammars/TestSpec.g:138:5: field_arg[s]
                    {
                    pushFollow(FOLLOW_field_arg_in_arg466);
                    field_arg(s);

                    state._fsp--;
                    if (state.failed) return s;

                    }
                    break;
                case 7 :
                    // /Users/pcmehlitz/projects/grammars/TestSpec.g:139:5: list_arg[s]
                    {
                    pushFollow(FOLLOW_list_arg_in_arg473);
                    list_arg(s);

                    state._fsp--;
                    if (state.failed) return s;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return s;
    }
    // $ANTLR end "arg"


    // $ANTLR start "list_arg"
    // /Users/pcmehlitz/projects/grammars/TestSpec.g:143:1: list_arg[ValSet s] : l1= list ( '|' l2= list )* ;
    public final void list_arg(ValSet s) throws RecognitionException {
        ArgList l1 = null;

        ArgList l2 = null;


        try {
            // /Users/pcmehlitz/projects/grammars/TestSpec.g:144:5: (l1= list ( '|' l2= list )* )
            // /Users/pcmehlitz/projects/grammars/TestSpec.g:144:7: l1= list ( '|' l2= list )*
            {
            pushFollow(FOLLOW_list_in_list_arg495);
            l1=list();

            state._fsp--;
            if (state.failed) return ;
            if ( state.backtracking==0 ) {
               s.addAll( createLists( l1)); 
            }
            // /Users/pcmehlitz/projects/grammars/TestSpec.g:145:7: ( '|' l2= list )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==17) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // /Users/pcmehlitz/projects/grammars/TestSpec.g:145:8: '|' l2= list
            	    {
            	    match(input,17,FOLLOW_17_in_list_arg525); if (state.failed) return ;
            	    pushFollow(FOLLOW_list_in_list_arg530);
            	    l2=list();

            	    state._fsp--;
            	    if (state.failed) return ;
            	    if ( state.backtracking==0 ) {
            	       s.addAll( createLists( l2)); 
            	    }

            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "list_arg"


    // $ANTLR start "int_arg"
    // /Users/pcmehlitz/projects/grammars/TestSpec.g:149:1: int_arg[ValSet s] : (a1= INT | p1= INT_PATTERN ) ( '|' (a2= INT | p2= INT_PATTERN ) )* ;
    public final void int_arg(ValSet s) throws RecognitionException {
        Token a1=null;
        Token p1=null;
        Token a2=null;
        Token p2=null;

        try {
            // /Users/pcmehlitz/projects/grammars/TestSpec.g:150:2: ( (a1= INT | p1= INT_PATTERN ) ( '|' (a2= INT | p2= INT_PATTERN ) )* )
            // /Users/pcmehlitz/projects/grammars/TestSpec.g:150:4: (a1= INT | p1= INT_PATTERN ) ( '|' (a2= INT | p2= INT_PATTERN ) )*
            {
            // /Users/pcmehlitz/projects/grammars/TestSpec.g:150:4: (a1= INT | p1= INT_PATTERN )
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( (LA10_0==INT) ) {
                alt10=1;
            }
            else if ( (LA10_0==INT_PATTERN) ) {
                alt10=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 10, 0, input);

                throw nvae;
            }
            switch (alt10) {
                case 1 :
                    // /Users/pcmehlitz/projects/grammars/TestSpec.g:150:5: a1= INT
                    {
                    a1=(Token)match(input,INT,FOLLOW_INT_in_int_arg575); if (state.failed) return ;
                    if ( state.backtracking==0 ) {
                       s.add( new Integer((a1!=null?a1.getText():null))); 
                    }

                    }
                    break;
                case 2 :
                    // /Users/pcmehlitz/projects/grammars/TestSpec.g:151:6: p1= INT_PATTERN
                    {
                    p1=(Token)match(input,INT_PATTERN,FOLLOW_INT_PATTERN_in_int_arg606); if (state.failed) return ;
                    if ( state.backtracking==0 ) {
                       s.addAll( expandInts((p1!=null?p1.getText():null))); 
                    }

                    }
                    break;

            }

            // /Users/pcmehlitz/projects/grammars/TestSpec.g:153:4: ( '|' (a2= INT | p2= INT_PATTERN ) )*
            loop12:
            do {
                int alt12=2;
                int LA12_0 = input.LA(1);

                if ( (LA12_0==17) ) {
                    alt12=1;
                }


                switch (alt12) {
            	case 1 :
            	    // /Users/pcmehlitz/projects/grammars/TestSpec.g:153:5: '|' (a2= INT | p2= INT_PATTERN )
            	    {
            	    match(input,17,FOLLOW_17_in_int_arg629); if (state.failed) return ;
            	    // /Users/pcmehlitz/projects/grammars/TestSpec.g:153:9: (a2= INT | p2= INT_PATTERN )
            	    int alt11=2;
            	    int LA11_0 = input.LA(1);

            	    if ( (LA11_0==INT) ) {
            	        alt11=1;
            	    }
            	    else if ( (LA11_0==INT_PATTERN) ) {
            	        alt11=2;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return ;}
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 11, 0, input);

            	        throw nvae;
            	    }
            	    switch (alt11) {
            	        case 1 :
            	            // /Users/pcmehlitz/projects/grammars/TestSpec.g:153:10: a2= INT
            	            {
            	            a2=(Token)match(input,INT,FOLLOW_INT_in_int_arg635); if (state.failed) return ;
            	            if ( state.backtracking==0 ) {
            	               s.add( new Integer((a2!=null?a2.getText():null))); 
            	            }

            	            }
            	            break;
            	        case 2 :
            	            // /Users/pcmehlitz/projects/grammars/TestSpec.g:154:11: p2= INT_PATTERN
            	            {
            	            p2=(Token)match(input,INT_PATTERN,FOLLOW_INT_PATTERN_in_int_arg666); if (state.failed) return ;
            	            if ( state.backtracking==0 ) {
            	               s.addAll( expandInts((p2!=null?p2.getText():null))); 
            	            }

            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop12;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "int_arg"


    // $ANTLR start "real_arg"
    // /Users/pcmehlitz/projects/grammars/TestSpec.g:159:1: real_arg[ValSet s] : (a1= REAL | p1= REAL_PATTERN ) ( '|' (a2= REAL | p2= REAL_PATTERN ) )* ;
    public final void real_arg(ValSet s) throws RecognitionException {
        Token a1=null;
        Token p1=null;
        Token a2=null;
        Token p2=null;

        try {
            // /Users/pcmehlitz/projects/grammars/TestSpec.g:160:2: ( (a1= REAL | p1= REAL_PATTERN ) ( '|' (a2= REAL | p2= REAL_PATTERN ) )* )
            // /Users/pcmehlitz/projects/grammars/TestSpec.g:160:4: (a1= REAL | p1= REAL_PATTERN ) ( '|' (a2= REAL | p2= REAL_PATTERN ) )*
            {
            // /Users/pcmehlitz/projects/grammars/TestSpec.g:160:4: (a1= REAL | p1= REAL_PATTERN )
            int alt13=2;
            int LA13_0 = input.LA(1);

            if ( (LA13_0==REAL) ) {
                alt13=1;
            }
            else if ( (LA13_0==REAL_PATTERN) ) {
                alt13=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 13, 0, input);
